* Fix `MapUser` inheritence (now properly inherits from `ReplayContainer`)
* Fix incorrect `__add__` method for `Check`