@@ -404,9 +404,13 @@ class ResultType(Enum):
     CORRECTION = "Aim Correction"
     TIMEWARP = "Timewarp"
 
-class Keys(IntFlag):
+class Key(IntFlag):
     M1 = 1
     M2 = 2
     K1 = 4
     K2 = 8
     SMOKE = 16
+
+# TODO remove in 4.x
+# @deprecated
+Keys = Key
