@@ -1,2 +1,3 @@
 * Fix `MapUser` inheritence (now properly inherits from `ReplayContainer`)
 * Fix incorrect `__add__` method for `Check`
+* Rename `Keys` to `Key` (`Keys` left available as deprecated)
